sw/qa/extras/ooxmlexport/ooxmlexport22.cxx
@@ -21,6 +21,8 @@
 #include <docsh.hxx>
 #include <IDocumentSettingAccess.hxx>
 
+#include <set>
+
 namespace
 {
 class Test : public SwModelTestBase
@@ -309,6 +311,62 @@ CPPUNIT_TEST_FIXTURE(Test, testBadFormulaResult)
     // - Actual  : 0
     // i.e. the SUM() field evaluated to an empty result.
     assertXPathContent(pXmlDoc, "/w:document/w:body/w:tbl/w:tr[4]/w:tc/w:p/w:r[4]/w:t", u"6");
+}
+
+CPPUNIT_TEST_FIXTURE(Test, testTdf166511)
+{
+    loadAndSave("tdf166511.docx");
+
+    // The reproducer for tdf#166511 depends on result having footer2 and footer3.xml
+    // Original bugdoc only has footer1.xml, and the result only started having multiples
+    //  after tdf#136472's fix
+    // This test uses a "good" roundtripped version of the bugdoc after the fix already
+    //  having the extra footer XMLs, so it doesn't depend on the change coming from tdf#136472
+
+    // Count total docPr ids and collect unique docPr ids to be counted later from various parts
+    //  of the doc, in the end both counts must be the same, as ids have to be unique
+    std::set<sal_Int32> aDiffIds;
+    size_t nIds = 0;
+    const OUString aFooters[] = { u"word/footer2.xml"_ustr, u"word/footer3.xml"_ustr };
+    for (const OUString& footer : aFooters)
+    {
+        xmlDocUniquePtr pXmlDoc = parseExport(footer);
+        CPPUNIT_ASSERT(pXmlDoc);
+
+        const int aDrawingNodes1 = countXPathNodes(pXmlDoc, "/w:ftr/w:p/w:r/mc:AlternateContent");
+        for (int i = 1; i <= aDrawingNodes1; i++)
+        {
+            OUString aId = getXPath(pXmlDoc,
+                                    "/w:ftr/w:p/w:r/mc:AlternateContent[" + OString::number(i)
+                                        + "]/mc:Choice/w:drawing/wp:anchor/wp:docPr",
+                                    "id");
+            aDiffIds.insert(aId.toInt32());
+            nIds++;
+            const OString aFallbackXPath
+                = "/w:ftr/w:p/w:r/mc:AlternateContent[" + OString::number(i)
+                  + "]/mc:Fallback/w:pict/v:rect/v:textbox/w:txbxContent/w:p/w:r/"
+                    "w:drawing/wp:inline/wp:docPr";
+            if (countXPathNodes(pXmlDoc, aFallbackXPath) > 0)
+            {
+                aId = getXPath(pXmlDoc, aFallbackXPath, "id");
+                aDiffIds.insert(aId.toInt32());
+                nIds++;
+            }
+        }
+        const int aDrawingNodes2 = countXPathNodes(pXmlDoc, "/w:ftr/w:p/w:r/w:drawing");
+        for (int i = 1; i <= aDrawingNodes2; i++)
+        {
+            OUString aId = getXPath(
+                pXmlDoc, "/w:ftr/w:p/w:r/w:drawing[" + OString::number(i) + "]/wp:anchor/wp:docPr",
+                "id");
+            aDiffIds.insert(aId.toInt32());
+            nIds++;
+        }
+    }
+    // Without the accompanying fix in place, this test would have failed with:
+    // - Expected : 7
+    // - Actual : 8
+    CPPUNIT_ASSERT_EQUAL(aDiffIds.size(), nIds);
 }
 
 } // end of anonymous namespace
